--- a/web/css/screen.css
+++ b/web/css/screen.css
@@ -1229,7 +1229,7 @@ input,
 select,
 textarea {
     border: 1px solid #fff;
-    border-bottom: 3px solid var(--primary-color);
+    /* border-bottom: 3px solid var(--primary-color); */
     color: #595959;
     display: block;
     float: left;
